--- a/L12/index.css
+++ b/L12/index.css
@@ -15,7 +15,7 @@
     
     color: rgb(255, 255, 255);
     font-size: 30px;
-    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.719);
     margin-top: 60px;
 
 }
@@ -35,7 +35,7 @@
     margin-top: 10px;
     margin-bottom: 10px;
     margin-bottom: 10px;
-    background-color: red;
+    background-color: rgba(255, 0, 0, 0.918);
     color: white;
     padding: 5px;
    
@@ -45,7 +45,7 @@
 #save {
 
     margin-top: 0px;
-     margin-bottom: 10px;
+    margin-bottom: 10px;
     background-color: green;
     color: white;
     padding: 5px;
